# git-author-manager

./: .git-authors.toml  Cargo.toml  README.md
src/: args.rs  author.rs  config.rs  git_config.rs  main.rs
