[package]
name = "git-author-manager"
version = "0.4.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
git2 = { version = "0.20.0", default-features = false }
serde = { version = "1.0.218", features = ["derive"] }
toml = "0.8.20"

[[bin]]
name = "git-aum"
path = "src/main.rs"
